fix coloring of buttons

--- a/src/pages/dev/test-site/main-page/main.styl
+++ b/src/pages/dev/test-site/main-page/main.styl
@@ -16,7 +16,7 @@ a:hover
   color: white
 
 .start
-  margin-top: 5%
+  margin-top: 75px
   width: 100%
   display: flex;
   justify-content: center;
@@ -531,16 +531,14 @@ a:hover
     border-radius: 10px
     padding: 30px
 
-    a 
-      color: #015eab;
-
-    .btn
-      p 
-        a 
-          color: white
+  a 
+    color: white;
 
 .temp
   font-size: 20px
+
+  a 
+    color: #015eab
 
 .search-card
   height: 10vh
