--- a/src/pages/dev/test-site/main-page/main.styl
+++ b/src/pages/dev/test-site/main-page/main.styl
@@ -512,3 +512,15 @@ a:hover
 
   p
     margin-bottom: 0
+
+.section
+  width: 60%
+  margin-left: 20%
+
+  h1
+    color: black
+    font-size: 60px
+    margin-bottom: 0
+
+  h2
+    color: black
