--- a/src/pages/dev/test-site/main-page/main.styl
+++ b/src/pages/dev/test-site/main-page/main.styl
@@ -203,7 +203,7 @@ a:hover
   position:absolute
   z-index:5
   height: 30vh
-  width: 60%
+  width: 100%
   object-fit: cover
   border-radius: 10px
 
@@ -474,27 +474,30 @@ a:hover
 
 .donate-card
   height: 30vh
-
-.donate-text
-  position:absolute
-  z-index: 100
-  width: 60%
-  display: grid
-  grid-template-columns: 40% 60%;
-  height: 30vh
-
-.donate-title
-  a 
-    color:white
-  a:hover
-    text-decoration: none
+  position:relative
 
   display: grid
   margin: auto
-  color: white
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-  font-family: "Maven Pro", sans-serif;
-  font-size: 50px
+  margin-bottom: 50px
+
+.donate-text
+  position:relative
+  z-index: 100
+  width: 80%
+  display: grid
+  margin: auto
+  padding: 25px
+  background: rgba(255,255,255,0.6);
+  color: black
+  font-size: 18px
+
+  a
+    color: black
+    font-weight: bold
+    text-decoration: none
+
+  p
+    margin-bottom: 0
 
 .caption-donate
   display: grid
@@ -520,7 +523,7 @@ a:hover
   h1
     color: black
     font-size: 60px
-    margin-bottom: 0
 
   h2
     color: black
+    margin-top: 0
