--- a/src/pages/dev/test-site/main-page/main.styl
+++ b/src/pages/dev/test-site/main-page/main.styl
@@ -487,9 +487,10 @@ a:hover
   display: grid
   margin: auto
   padding: 25px
-  background: rgba(255,255,255,0.6);
+  background: rgba(255,255,255,0.7);
   color: black
   font-size: 18px
+  border-radius: 10px
 
   a
     color: black
