--- a/src/pages/dev/test-site/main-page/main.styl
+++ b/src/pages/dev/test-site/main-page/main.styl
@@ -386,26 +386,51 @@ a:hover
   display: grid
   margin: auto
 
-.basic-card
+.card-set
   display: grid
-  grid-template-columns: 40% 60%
+  grid-template-columns: 50% 50%
   grid-template-rows: 30vh
+  width: 60%
+  margin: 0 20%
 
-  
-  .link-title
-    display: grid
-    margin: auto
-    margin-left: 10%
-    font-size: 35px
+.basic-card
+  background-color: white
+  width: 90%
+  margin: 2% 0
+  text-align: center
+  padding: 0 10px
+  padding-bottom: 30px
+  height: 25vh
+
+  .link-title 
+    font-size: 25px
     
     a
       color: black
 
   p
-    display: grid
-    margin: auto
-    margin-left: 10% 
-    margin-right: 10%
+    color: black
+    font-size: 16px
+
+  border-radius: 10px
+  box-shadow: black 1px 0 10px
+
+.right-card
+  margin-left: 10%
+
+.basic-card2
+  margin: 0
+  .link-title
+    padding-left: 10%
+
+    font-size: 35px
+
+    a
+      color: black
+
+  p
+    padding-left: 5%
+
     color: black
     font-size: 16px
 
