Updated map interface management

--- a/src/pages/map/map-interface/map-page/main.module.styl
+++ b/src/pages/map/map-interface/map-page/main.module.styl
@@ -43,8 +43,8 @@ This stylesheet the overall application page layout.
   overflow: hidden
   text-align: right
   :global(.bp5-button-text)
-    transition all 0.2s
-    transition-delay 0.1s
+    transition: all 200ms
+    transition-delay: 100ms
 
 .menu-card.narrow-card
   // Transition opacity when leaving context panel
