--- a/src/pages/dev/test-site/about/main.styl
+++ b/src/pages/dev/test-site/about/main.styl
@@ -7,7 +7,10 @@
   padding: 0 20%
 
 #apps
-  padding: 75px 0    
+  margin-top: 10px
+  border-radius: 10px
+  box-shadow: black 1px 0 10px
+  margin-bottom: 80px
 
 a:hover
   text-decoration: none
@@ -20,8 +23,7 @@ a:hover
 .app-box 
   height: 15vh
   display: flex
-  width: 60%
-  margin: 0 20%
+  margin-right: 5%
   position: relative
   color: black
 
@@ -46,8 +48,7 @@ a:hover
   font-family: "Maven Pro", sans-serif
   text-align: center  
   background-color: #4BABBf
-  width: 60%
-  margin: 0 20%
+  border-radius: 10px 10px 0 0
   color: white
 
 
@@ -60,38 +61,28 @@ a:hover
   position: relative
   height: 30vh
   background-color: white
+  display: grid
+  grid-template-columns: 30% 70%
+  border-radius: 10px
+  box-shadow: black 1px 0 10px
 
-#api-circle-text
-  display: table-cell;
-  vertical-align: middle;
-  color: #6bbe98;
-  font-size: 72px
-  font-weight: 500
-
-.api-circle
-  float: left
-  margin-left: 15%
-  margin-right: 50px
-  background-color: #fff;
-  height: 200px;
-  width: 200px;
-  border-radius: 50%;
-  text-align: center;
-  display: table;
-  border: 11px solid #6bbe98;
-  color: #4BABBf;
+.api-image
+  margin:auto
 
 #api-text
-  padding-top: 50px
-  margin-right: 15%
   color: #4bab7f;
   font-size: 20px;
   line-height: 28px;
   font-weight: 400;
+  margin: auto
+  padding: 0 30px
 
 
 #about  
   padding: 50px 0
+  border-radius: 10px
+  box-shadow: black 1px 0 10px
+  margin-bottom: 10px
 
 .about-row
   margin: 4%
@@ -109,13 +100,14 @@ a:hover
 
 #about-title
   text-align: left
-  color: #E0E1E6
   position: relative
   padding-bottom: 0
+  margin-top: 75px
+  color: black
 
 .line
   width: 100%;
-  border-bottom: 1px solid #E0E1E6;
+  border-bottom: 1px solid black;
   position: absolute;
 
 .rock-border
