change header color

--- a/src/pages/dev/test-site/people/main.styl
+++ b/src/pages/dev/test-site/people/main.styl
@@ -6,7 +6,7 @@ a:hover
     text-decoration: none
 
 .big
-    color: #E0E1E6
+    color: black
     text-align: left
     font-size: 75px
     font-family: "Maven Pro", sans-serif
@@ -15,7 +15,7 @@ a:hover
     padding-top: 100px
 
 .line
-  border-bottom: 1px solid #E0E1E6;
+  border-bottom: 1px solid black
   width: 60%
   margin: 0 20% 
 
@@ -97,4 +97,4 @@ e
 
 .subtitle
   margin-left: 20%
-  color: #E0E1E6;
+  color: black;
