wrapper location classes

--- a/src/pages/dev/test-site/main-page/main.styl
+++ b/src/pages/dev/test-site/main-page/main.styl
@@ -352,7 +352,7 @@ a:hover
 
 .location
   display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-columns: 50% 50%;
   grid-template-rows: 40vh;
 
 .t1
@@ -454,7 +454,6 @@ a:hover
 
 .location-card
   display: grid
-  grid-template-columns: 50% 50%
   grid-template-rows: 30vh
   
   .link-title
