pre upstream merge

--- a/src/pages/dev/test-site/main-page/main.styl
+++ b/src/pages/dev/test-site/main-page/main.styl
@@ -130,12 +130,6 @@ a:hover
   a:hover
     color: white
 
-.rockd-png
-  width: 22px
-  padding-right: 4px
-  float: left
-  padding-top: 5px
-
 .country_container 
   height: 100vh
 
@@ -361,7 +355,7 @@ a:hover
 .location
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 40vh;
+  grid-template-rows: 30vh;
 
 .t1
   margin-left: 10%
@@ -464,15 +458,6 @@ a:hover
   display: grid
   grid-template-rows: 30vh
   
-  .link-title
-    display: grid
-    margin: auto
-    margin-left: 10%
-    font-size: 35px
-    
-    a
-      color: black
-
   p
     color: black
     font-size: 16px
@@ -499,6 +484,8 @@ a:hover
     display: grid
     margin: auto
     margin-top: 1%
+
+  height: 30vh
 
 .map-card
   p
@@ -565,3 +552,34 @@ a:hover
   h2
     color: black
     margin-top: 0
+
+.temp
+  font-size: 20px
+
+  a 
+    color: #015eab
+
+.mobile-card
+  height: 10vh
+  display: grid
+  grid-template-columns: 10vh 80%
+
+  a
+    color: black
+
+  h1
+    display: grid
+    margin: auto
+    font-size: 50px
+
+.rockd-png
+  height: 10vh
+  width: 10vh
+  padding-top: 0
+  border-radius: 10px 0 0 10px
+
+.search-card
+  h1 
+    display: grid
+    margin: auto
+    font-size: 50px
