Updated unit section table

--- a/packages/column-builder/src/components/comp.module.sass
+++ b/packages/column-builder/src/components/comp.module.sass
@@ -177,3 +177,7 @@
   &::before
     content: "DOI: "
   color: rgb(86, 109, 138)
+
+.table-header-row
+  background-color: var(--panel-secondary-background-color)
+  border-bottom: 1px solid var(--panel-rule-color)
