Started putting in place a page console

--- a/src/layouts/main.module.sass
+++ b/src/layouts/main.module.sass
@@ -41,3 +41,10 @@
     transform: translate(-50%, -50%)
   &.page-transition-leave
     opacity: 0
+
+
+.page-admin-container
+  position: fixed
+  top: 0
+  right: 0
+  margin: 1em
