--- a/src/components/navigation/breadcrumbs.module.sass
+++ b/src/components/navigation/breadcrumbs.module.sass
@@ -3,3 +3,9 @@
   display: inline-flex
   align-items: center
   gap: 0.5em
+
+.page-header
+  margin: 1.2em 0 1.2em
+  h1
+    margin-top: 0
+    margin-bottom: 0
