Created a basic admin component

--- a/pages/layout.module.sass
+++ b/pages/layout.module.sass
@@ -5,3 +5,11 @@
   height: 100vh
   overflow: hidden
   position: relative
+
+// An admin console for the page
+.page-admin-container
+  position: fixed
+  top: 0
+  right: 0
+  margin: 1em
+  z-index: 5000
