--- a/src/components/icon.module.sass
+++ b/src/components/icon.module.sass
@@ -12,10 +12,22 @@
   .icon-container
     margin-right: 0.4em
     margin-bottom: 0
-    transform: translateY(0.05em)
   .subtitle
     margin-left: 1em
     font-weight: 300
   .site-name
     font-weight: 300
     color: unset
+
+.page-header
+  margin: 1.2em 0 1.2em
+  display: flex
+  flex-direction: row
+  align-items: start
+  .header-left
+    flex: 0
+    margin: 0.5em 0 1em 0
+  gap: 1em
+  h1
+    margin-top: 0
+    margin-bottom: 0
