Getting closer to a good feedback model

--- a/pages/integrations/xdd/feedback/@sourceTextID/lib/feedback.module.sass
+++ b/pages/integrations/xdd/feedback/@sourceTextID/lib/feedback.module.sass
@@ -1,5 +1,13 @@
 .feedback-component
   position: relative
   width: 800px
-  &>svg
+
+  & > svg
     width: 800px
+
+.node
+  cursor: pointer
+
+
+.feedback-text
+  margin-bottom: 2em
