Updated feedback components

--- a/src/styles/_theme.styl
+++ b/src/styles/_theme.styl
@@ -28,14 +28,16 @@ $dark-text = $gray4
   --text-dim-color: #aaa
   --text-emphasized-color: #000
   --text-subtle-color: #444
-  --translucent-panel-background-color: rgba(255,255,255,0.2)
+  --translucent-panel-background-color: rgba(255, 255, 255, 0.2)
   --ui-color-accent-text: rgb(143, 39, 138)
   --ui-color-accent: rgb(252, 217, 250)
+  --monospace-font: "Fira Code", "Source Code Pro", monospace
 
 body
   color: var(--text-color);
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
+
   &.bp5-dark
     color: $dark-text;
     background-color: $dark-background;
