--- a/pages/integrations/xdd/feedback/@sourceTextID/lib/feedback.module.sass
+++ b/pages/integrations/xdd/feedback/@sourceTextID/lib/feedback.module.sass
@@ -11,3 +11,15 @@
 
 .feedback-text
   margin-bottom: 2em
+
+.entity-panel
+  position: relative
+  padding: 1em
+
+.control-panel
+  max-width: 15em
+  position: absolute
+  top: 1em
+  right: 1em
+  padding: 0.2em 0.5em
+
