Updated table management

--- a/src/components/legend-table/main.module.sass
+++ b/src/components/legend-table/main.module.sass
@@ -45,5 +45,7 @@
   padding: 0px 4px
   min-height: 16px
 
-.data-sheet-container
+.data-sheet-outer
   position: relative
+  flex: 1
+  display: flex
