Deleted redundant layer inspector code

--- a/pages/dev/map/layers/main.module.styl
+++ b/pages/dev/map/layers/main.module.styl
@@ -1,3 +1,6 @@
+:root
+  --navbar
+
 .feature-panel
   position: relative
   overflow-x: hidden
@@ -5,16 +8,20 @@
 .key-value
   display: inline-block
   margin-right: 1em
+
   .key
     font-weight: bold
     font-size: 0.9em
+
     &:after
       content: ': '
+
   .value
     font-size: 0.9em
 
 .feature-properties
   position: relative
+
   &:before
     content: "–"
     position: absolute
@@ -31,6 +38,7 @@
   margin-left: -1em
   margin-right: -1em
   margin-bottom: 0.5em
+
   &:last-child
     border-bottom: none
 
@@ -39,11 +47,13 @@
   flex-direction: row
   align-items: baseline
   padding 0 1em
+
   h3
-    margin-right: 0.5em    
+    margin-right: 0.5em
 
 .opacity-slider
   margin: 0 1em 0.5em
+
   :global
     .bp5-slider-handle .bp5-slider-label
       background-color: var(--secondary-color)
