Fix a small map bug

--- a/pages/map/map-interface/map-page/main.module.styl
+++ b/pages/map/map-interface/map-page/main.module.styl
@@ -32,6 +32,9 @@ This stylesheet the overall application page layout.
 .right-panel
   width: 24em
 
+.menu-card:global(.bp5-card)
+  padding: 0
+
 // Menu
 .buttons
   display: flex
