--- a/pages/map/map-interface/components/navbar/navbar.module.sass
+++ b/pages/map/map-interface/components/navbar/navbar.module.sass
@@ -1,4 +1,4 @@
-.search-results-card
+.search-results-card:global(.bp5-card)
   padding: 0
   overflow-y: scroll
 
@@ -6,13 +6,16 @@
   padding: 0
   overflow: hidden
   position: relative
+
   li
     cursor: pointer
+
     &:hover
       background-color: var(--accent-hover-color)
+
   ul
     list-style: none
-    margin: 0 
+    margin: 0
     padding-left: 0
 
 
@@ -26,14 +29,18 @@
 
 .search-guidance
   padding: 0 1em
+
   h3
     margin: 1em 0 0.2em
+
   ul
     padding-left: 1.2em
     margin: 0.5em 0 1em
+
     li
       list-style-type: none
       position: relative
+
       &:before
         content: '–'
         position: absolute
