--- a/pages/dev/map/rockd-strabospot/main.module.sass
+++ b/pages/dev/map/rockd-strabospot/main.module.sass
@@ -5,3 +5,72 @@
 .context-panel
   position: relative
   width: 100%
+
+// The styles below were taken from the detail panel in the map-interface package
+
+.feature-panel
+  position: relative
+  margin: 0 -1em
+
+.key-value
+  display: inline-block
+  margin-right: 1em
+
+  .key
+    font-weight: bold
+    font-size: 0.9em
+
+    &:after
+      content: ': '
+
+  .value
+    font-size: 0.9em
+
+.feature-properties
+  position: relative
+
+  &:before
+    content: "–"
+    position: absolute
+    top: 4px
+    left: 0
+
+.feature-header h3
+  margin-bottom: 0
+  margin-top: 0.5em
+
+.feature-group
+  border-bottom: 1px solid var(--panel-rule-inner)
+  margin-bottom: 0.5em
+
+  &:last-child
+    border-bottom: none
+
+.tile-info
+  display: flex
+  flex-direction: row
+  align-items: baseline
+
+  h3
+    margin-right: 0.5em
+
+.opacity-slider
+  margin: 0 1em 0.5em
+
+  :global
+    .bp5-slider-handle .bp5-slider-label
+      background-color: var(--secondary-color)
+      color: var(--text-color)
+
+.unit-number
+  .unit
+    font-size: 0.9em
+    margin-left: 0.2em
+    font-weight: bold
+
+.page
+  margin: 2em auto
+  max-width: 50em
+
+.dev-index-page
+  overflow-y: scroll
