Working checkins / spots

--- a/pages/dev/map/rockd-strabospot/main.module.sass
+++ b/pages/dev/map/rockd-strabospot/main.module.sass
@@ -27,3 +27,10 @@
   padding: 1em 0
   font-style: italic
   color: var(--secondary-color)
+
+.features > *
+  padding-bottom: 1em
+
+  &:not(:last-child)
+    margin-bottom: 1em
+    border-bottom: 1px solid var(--panel-rule-color)
