--- a/pages/dev/map/rockd-strabospot/main.module.sass
+++ b/pages/dev/map/rockd-strabospot/main.module.sass
@@ -44,6 +44,57 @@
 
   h2
     flex-grow: 1
+    font-size: 1.2em
 
   .details
     color: var(--secondary-color)
+
+.context-panel
+
+  h3
+    margin-bottom: 0.5em
+
+  h3:first-child
+    margin-top: 0
+
+  ul
+    padding-left: 1em
+
+ul.legend-list
+  list-style: none
+  padding-left: 2em
+
+.legend-item
+  margin: 0.2em 0 1em
+
+.legend-header
+  display: flex
+  flex-direction: row
+  align-items: baseline
+  gap: 1em
+  justify-content: space-between
+  position: relative
+  margin: 0.5em 0 0.5em
+
+  .system-link
+    color: var(--secondary-color)
+    font-style: italic
+
+    a
+      color: var(--secondary-color)
+      text-decoration: underline
+
+  h3, h4
+    margin: 0
+
+.description
+  font-style: italic
+  font-size: 0.9em
+
+.swatch
+  display: inline-block
+  width: 1.2em
+  height: 1.2em
+  border-radius: 0.2em
+  position: absolute
+  left: -2em
