next steps: add zoom details to database config and render. render geojson layer

--- a/pages/dev/map/saved-locations/main.module.sass
+++ b/pages/dev/map/saved-locations/main.module.sass
@@ -50,6 +50,9 @@
     color: var(--secondary-color)
 
 .context-panel
+  overflow-y: auto
+  max-height: 100vh
+  width: fit-content
 
   h3
     margin-bottom: 0.5em
