--- a/pages/maps/ingestion/@id/@editMode/main.module.sass
+++ b/pages/maps/ingestion/@id/@editMode/main.module.sass
@@ -1,10 +1,18 @@
 .edit-page
   display: flex
   flex-direction: row
-  width: calc(100% - 2em)
-  height: calc(100% - 2em)
-  overflow: hidden
+  height: 100%
+  position: relative
 
+.main-panel
+  height: 100%
+  display: flex
+  flex-direction: column
+  padding: 1em 2em
+
+.table-container
+  flex: 1
+  min-height: 0
 
 .spacer
   flex-grow: 1
@@ -16,7 +24,7 @@
 .map-panel-container
   flex: 1
   min-width: 0
-  
+
 div.interface
   height: 100%
   background-color: #efefef
@@ -24,9 +32,7 @@ div.interface
   margin-right: auto
 
 
-
-
-
 div.edit-table-wrapper
   overflow: scroll
   width: 100%
+
