Improved loading of cell components

--- a/pages/maps/ingestion/@id/tables/edit-table.module.sass
+++ b/pages/maps/ingestion/@id/tables/edit-table.module.sass
@@ -2,7 +2,7 @@
   height: 100%
   display: flex
   flex-direction: column
-  
+
 td
   text-wrap: nowrap
   background-color: #ffffff78
@@ -22,7 +22,7 @@ div.filter-header
   font-size: 1rem
 
 div.filter-select
-    padding-bottom: .2rem
+  padding-bottom: .2rem
 
 div.filter-container
   box-shadow: #00000038 1px 1px 8px
@@ -30,8 +30,20 @@ div.filter-container
   border-radius: 10px
 
 div.warning
-    background-color: rgb(255 216 152 / 73%)
-    color: black
-    border: #ffe26c solid 1px
-    font-size: 1rem
-    padding-bottom: 0.2rem
+  background-color: rgb(255 216 152 / 73%)
+  color: black
+  border: #ffe26c solid 1px
+  font-size: 1rem
+  padding-bottom: 0.2rem
+
+.editable-cell
+  height: 18px
+  padding: 1.7px 8px
+  font-size: 12px
+  min-height: 0px
+  min-width: 99%
+  box-shadow: none
+  border: 0
+  z-index: 0
+  position: relative
+  max-width: 99%
