Make omitted row headers show up differently

--- a/pages/maps/ingestion/@id/tables/edit-table.module.sass
+++ b/pages/maps/ingestion/@id/tables/edit-table.module.sass
@@ -47,3 +47,11 @@ div.warning
   z-index: 0
   position: relative
   max-width: 99%
+
+.read-only-value
+  color: #ccc
+
+.row-header-text.omit
+  // Strikethrough
+  text-decoration: line-through
+  color: #666
