Row omission seems to work

--- a/pages/maps/ingestion/@id/tables/edit-table.module.sass
+++ b/pages/maps/ingestion/@id/tables/edit-table.module.sass
@@ -55,3 +55,12 @@ div.warning
   // Strikethrough
   text-decoration: line-through
   color: #666
+
+.table-actions
+  display: flex
+  flex-direction: row
+  gap: 1em
+  align-items: baseline
+
+  .spacer
+    flex-grow: 1
