Started streamlining editing

--- a/pages/maps/ingestion/@id/@editMode/main.module.sass
+++ b/pages/maps/ingestion/@id/@editMode/main.module.sass
@@ -37,3 +37,11 @@ div.edit-table-wrapper
   overflow: scroll
   width: 100%
 
+.map-panel
+  display: flex
+  height: 100%
+  flex-direction: column
+
+.single-map
+  flex: 1
+  min-height: 40%
