--- a/pages/maps/ingestion/@id/main.module.sass
+++ b/pages/maps/ingestion/@id/main.module.sass
@@ -1,9 +1,8 @@
-body
-  margin: 0
-  padding: 0
-
 :root
   --map-detail-stack-width: fit-content
+
+.page
+  padding: 1em 2em
 
 .single-map
   flex: 1
@@ -23,9 +22,11 @@ body
 .legend-title
   display: flex
   flex-direction: row
+
   &:hover
     cursor: pointer
     background: #eee
+
   h4
     margin: 0
     margin-right: 0.5em
@@ -37,8 +38,8 @@ body
   margin-right: 0.5em
 
 .edit-menu
-    display: flex
-    flex-direction: column
+  display: flex
+  flex-direction: column
 
 .m-0
   margin: 0
@@ -57,16 +58,19 @@ body
 
 .edit-menu
   flex-grow: 1
+
   button.icon-button
     aspect-ratio: 1 / 1
     margin: 5px
     display: flex
     flex-direction: column
     border-radius: 10px
+
     .icon-container
       display: flex
       margin: auto
       padding: 6px
+
     .icon-label
       padding-bottom: 10px
 
