--- a/pages/map/map-interface/components/info-drawer/main.module.styl
+++ b/pages/map/map-interface/components/info-drawer/main.module.styl
@@ -3,22 +3,26 @@
   pointer-events none
 
 .infodrawer-content
-  margin: 0 -1em -1em;
+  margin: 0;
 
 .macrostrat-detail
   display: flex;
   align-items: center;
   margin 0.2em 0 0.4em;
+
   .expansion-summary-title
     margin-right: 0.8em;
+
     &:after
       content: ":";
 
 .described-age, .macrostrat-detail
   display: flex;
   align-items: center;
+
   .expansion-summary-title
     margin-right: 0.8em;
+
     &:after
       content: ":";
 
@@ -32,11 +36,10 @@
     flex-grow 1
 
 
-
-  // &.loading
-  //   max-height: 200px
-  // max-height: calc(100vh - 60px)
-  // transition: max-height 0.5s ease-in-out 0.25s
+// &.loading
+//   max-height: 200px
+// max-height: calc(100vh - 60px)
+// transition: max-height 0.5s ease-in-out 0.25s
 
 
 .spacer
@@ -47,6 +50,7 @@
   h3
     margin: 0.5em 0 0.5em;
     flex-grow: 1;
+
   .description
     margin-right: 1em
 
@@ -55,6 +59,7 @@
 
 .age-refinement-plot
   position relative
+
   .age-refinement-bar
     border-radius: 3px
     margin-bottom: 1px
