Added a basic overlay for entire correlation diagram

--- a/pages/columns/correlation/main.module.sass
+++ b/pages/columns/correlation/main.module.sass
@@ -68,8 +68,17 @@ $map-size-inset: 12em
 
 
 .package
-  display: flex
-  flex-direction: row
+  position: relative
+
+  .package-overlay
+    position: absolute
+    top: 9px
+    left: 0
+    border: 2px solid red
+
+  .column-container
+    display: flex
+    flex-direction: row
 
 .map-expanded-button
   position: absolute
