--- a/pages/columns/correlation/main.module.sass
+++ b/pages/columns/correlation/main.module.sass
@@ -76,6 +76,10 @@ $map-size-inset: 12em
     left: 0
     border: 2px solid red
 
+  .laterally-extensive-unit .strat-col-span
+    position: absolute
+    border: 2px solid red
+
   .column-container
     display: flex
     flex-direction: row
