Fix style loading functions

--- a/pages/columns/correlation/main.module.sass
+++ b/pages/columns/correlation/main.module.sass
@@ -37,8 +37,10 @@ $map-size-inset: 12em
 .column-selection-map
   overflow: hidden
 
-  :global(.main-view)
-    height: 100%
+  .correlation-map
+    height: 40em
+    position: relative
+
   flex: 1
   min-height: $map-size-inset
   max-height: $map-size
