Improved correlation diagram wrapper

--- a/pages/columns/correlation/main.module.sass
+++ b/pages/columns/correlation/main.module.sass
@@ -38,7 +38,7 @@ $map-size-inset: 12em
   overflow: hidden
 
   .correlation-map
-    height: 40em
+    height: 100%
     position: relative
 
   flex: 1
