--- a/pages/columns/correlation/main.module.sass
+++ b/pages/columns/correlation/main.module.sass
@@ -64,9 +64,12 @@ $map-size-inset: 12em
   overflow: scroll
   background-color: var(--panel-secondary-background-color)
 
+.diagram-container
+  position: relative
 
 .correlation-diagram
-  padding: 1em
+  margin-right: 2em
+  width: fit-content
   background-color: var(--panel-secondary-background-color)
   //box-shadow: 0 0 0.3em 0 var(--card-shadow-color)
   --column-background-color: var(--background-color)
