--- a/pages/map/map-interface/components/info-drawer/strat-column/strat-column.module.styl
+++ b/pages/map/map-interface/components/info-drawer/strat-column/strat-column.module.styl
@@ -1,15 +1,18 @@
 .strat-column-container
-  min-height: 500px
   padding: 0 1em 1em
   --column-background-color: var(--panel-background-color)
   --column-stroke-color: var(--text-color)
   --column-note-color: var(--text-color)
 
-:global
-  .timescale-container .timescale
-    width: calc(6em + 6px)
-    --timescale-level-size: 1.5em
-
 .strat-column-panel h3
   text-overflow: ellipsis
   overflow: hidden
+
+.unit-details-panel
+  position: sticky
+  bottom: 0
+  background-color: var(--panel-background-color)
+  max-height: 40vh
+  font-size: 0.9em
+  min-height: 200px
+
